kubernetes/applications/media/servarr/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: TV Show Management
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Servarr
    gethomepage.dev/icon: sonarr.png
    gethomepage.dev/name: Sonarr
spec:
  ingressClassName: cilium
  rules:
    - host: sonarr.costanza.cloud
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 80
  tls:
    - hosts:
        - sonarr.costanza.cloud
      secretName: sonarr-tls
